--- a/CRUD-example/src/app/Components/message-list/message-list.component.html
+++ b/CRUD-example/src/app/Components/message-list/message-list.component.html
@@ -1,1 +1,28 @@
-<p>message-list works!</p>
+<h2>Messages List!</h2>
+
+<button>ADD</button>
+
+
+<table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>TITLE</th>
+            <th>DESCRIPTION</th>
+            <th>ACTIONS</th>
+        </tr>
+    </thead>
+    
+    <tbody>
+        <tr *ngFor="let msg of messages">
+            <td>{{msg.id}}</td>
+            <td>{{msg.title}}</td>
+            <td>{{msg.description}}</td>
+            <td>
+                <button>UPDATE</button>
+                <button>DELETE</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
