--- a/CRUD-example/src/app/Components/message-form/message-form.component.html
+++ b/CRUD-example/src/app/Components/message-form/message-form.component.html
@@ -1,1 +1,14 @@
-<p>message-form works!</p>
+<div>
+
+    <h2>Message Form</h2>
+    
+    <form [formGroup]="messageForm" (ngSubmit)="saveMessage()">        
+         <label for="title">Title:</label>
+        <input type="text" id="title" [formControl]="title" required/>
+
+              <label for="description">Description:</label>
+        <input type="text" id="description" [formControl]="description" required/>
+
+        <button>Save</button>
+    </form>
+</div>
