--- a/CRUD-example/src/app/Components/message-form/message-form.component.html
+++ b/CRUD-example/src/app/Components/message-form/message-form.component.html
@@ -2,14 +2,28 @@
 
     <h1>Message Form</h1>
     <p id="toastMessage"></p>
-    
-    <form [formGroup]="messageForm" (ngSubmit)="saveMessage()">        
-         <label for="title">Title:</label>
-        <input type="text" id="title" [formControl]="title" required/>
 
-              <label for="description">Description:</label>
-        <input type="text" id="description" [formControl]="description" required/>
+    <form [formGroup]="messageForm" (ngSubmit)="saveMessage()">
+        <div>
+            <label for="title">Title:</label>
+            <input type="text" id="title" [formControl]="title" required />
 
-        <button>Save</button>
+            <div *ngIf="title.errors">
+                <div *ngIf="title.errors && isValidForm != null && !isValidForm" [ngClass]="'error'">
+                    <div>Title is required</div>
+                    <div>Title can be max 150 characters long.</div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <label for="description">Description:</label>
+            <input type="text" id="description" [formControl]="description" required />
+            <div *ngIf="description.errors">
+                <div *ngIf="description.errors && isValidForm != null && !isValidForm" [ngClass]="'error'">
+                    <div>Description is required</div>
+                </div>
+            </div>
+        </div>
+        <button type="submit">Save</button>
     </form>
 </div>
